# Sorted-alghorithms

./: CMakeLists.txt  README.md
App/: main.cc  test.cc
Stats/: Untitled1.ipynb  output.csv
include/: SortedAlghs.h
